first draft for friends view

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -23,7 +23,7 @@
             class="oi oi-arrow-left"></span> Close</a>
     <div class="probootstrap-site-logo probootstrap-animate" data-animate-effect="fadeInLeft">
 
-      <a href="/profile" class="mb-2 d-block probootstrap-logo">TTAnalyze</a>
+      <a href="/friends" class="mb-2 d-block probootstrap-logo">TTAnalyze</a>
     </div>
     <div class="probootstrap-overflow">
 
@@ -43,20 +43,16 @@
         </header>
         <div style="position: absolute; bottom: 350px;">
           <ul>
-            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a
-                    href="/profile">Profile</a>
+            <li class="probootstrap-animate active" data-animate-effect="fadeInLeft"><a
+                    href="/friends">Friends</a>
             </li>
-            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="/dashboard">Event
-              Dashboard</a>
-            </li>
-            </li>
-            <li class="probootstrap-animate active" data-animate-effect="fadeInLeft"><a href="/contact">Contact</a>
+            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="/contact">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
       <footer class="probootstrap-aside-footer probootstrap-animate" data-animate-effect="fadeInLeft">
-        <p>&copy; 2017 TTAnalyze</a>. <br/> All Rights Reserved</p>
+        <p>&copy; 2018 TTAnalyze</a>. <br/> All Rights Reserved</p>
 
         <form action="/connect/twitter" method="post">
           <input type="hidden" name="_method" value="delete">
