--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,7 @@
 
     <style>
         body {
+            background-image: url(http://www.ai-planet.com/wp-content/uploads/2017/11/twittor-bots.jpg);
             -moz-background-size: cover;
             -webkit-background-size: cover;
             background-size: cover;
@@ -40,8 +41,8 @@
             <div class="col-xl-8 col-lg-14">
                 <div class="row">
                     <div class="probootstrap-site-logo probootstrap-animate">
-                        <div class="col-xl-4 col-lg-14 mx-auto">
-                            <a href="/profile" class="mb-5 d-block probootstrap-logo"
+                        <div class="col-xl-2 col-lg-14 mx-auto">
+                            <a href="/friends" class="mb-5 d-block probootstrap-logo"
                                style="font-size: 400%;">TTAnalyze</a>
                         </div>
                     </div>
@@ -51,7 +52,7 @@
                     <div class="col-xl-4 col-lg-14 mx-auto">
                         <form action="/connect/twitter" method="post" class="probootstrap-form mb-5">
 
-                            <div class="form-group" style="margin-left: -80%; margin-right: 30%;">
+                            <div class="form-group" style="margin-left: -55%; margin-right: 30%;">
                                 <button class="btn btn-block btn-social btn-twitter">
                                     <i class="fa fa-twitter fa-5x" style="margin-top: 3%; margin-left: 5%"></i>
                                     <span style="font-size: medium; margin-left: 10%">Connect with Twitter</span>
