--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -43,10 +43,10 @@
         </header>
         <div style="position: absolute; bottom: 350px;">
           <ul>
-            <li class="probootstrap-animate active" data-animate-effect="fadeInLeft"><a
+            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a
                     href="/friends">Friends</a>
             </li>
-            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="/contact">Contact</a>
+            <li class="probootstrap-animate active" data-animate-effect="fadeInLeft"><a href="/contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -73,7 +73,7 @@
 
             <div class="row">
               <div class="col-xl-8 col-lg-12 mx-auto">
-                <h1 class="mb-3">Contact</h1>
+                <h1 class="mb-3">Contact Us</h1>
 
                 <form action="#" method="post" class="probootstrap-form mb-5">
                   <div class="row">
