--- a/src/main/resources/templates/friendDetails.html
+++ b/src/main/resources/templates/friendDetails.html
@@ -70,10 +70,37 @@
 
 <main role="main" class="probootstrap-main js-probootstrap-main">
 
-    <span th:text="'Botness Score: ' + ${analysisResult.botness.scores.get('english')}"></span>
-    <span th:text="'Trollness Score: ' + ${analysisResult.trollness.totalScore}"></span>
+    <table class="table" width="70%">
+        <div class="row">
+            <div class="col-sm-3">
+                <span>Botness Score:</span>
+            </div>
+            <div class="col-sm-9">
+                 <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.botness.scores.get('english')*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.botness.scores.get('english')}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
+        <div class="row">
+            <div class="col-sm-3">
+                <span>Trolness Score:</span>
+            </div>
+            <div class="col-sm-9">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.totalScore*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.totalScore}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </table>
 </main>
 
 
