--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,10 +3,31 @@ html {
 
 body {
   font-family: "Work Sans", sans-serif;
-  line-height: 1.8;
+  line-height: 1.4;
   font-size: 18px;
   background: #fff;
   color: #859196; }
+
+.main-score {
+  line-height: 2.6;
+  color: #9f191f;
+  font-size: 28px;
+  font-family: Cambria;
+}
+
+.main-score-explanation {
+  line-height: 2.6;
+  color: #1FAD9F;
+  font-size: 28px;
+  font-family: Cambria;
+}
+
+.detail-score-explanation {
+  line-height: 1.6;
+  color: #e0a800;
+  font-size: 18px;
+  font-family: Cambria;
+}
 
 a {
   -webkit-transition: .3s all ease;
