--- a/src/main/resources/templates/friendDetails.html
+++ b/src/main/resources/templates/friendDetails.html
@@ -70,17 +70,175 @@
 
 <main role="main" class="probootstrap-main js-probootstrap-main">
 
-    <table class="table" width="70%">
+    <div class="container" style="margin-top: -15px;">
         <div class="row">
+            <div class="col-sm-3">
+                <div class="card" col-sm-3 style="width: 50%; margin-left: -50%;">
+                    <img class="card-img-top"  th:src="${userProfile.profileImageUrl}" th:alt="xx"
+                         data-animate-effect="fadeIn">
+                    <span class="text-error text-center" th:text="'@' + ${userProfile.screenName}" style="margin-bottom : 0px;"></span>
+                </div>
+            </div>
+            <div class="col-sm-4" style="margin-left: -20%;">
+                <table class="table" width="70%">
+                    <div class="row">
+                        <div class="col-sm-30">
+                            <span>Member Since:</span>
+                        </div>
+                        <div class="col-sm-30">
+                            <span style="color: #1e7e34;"
+                                  th:text="${#dates.format(userProfile.createdDate, 'dd-MMM-yyyy')}"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-30">
+                        <span>Followers Count:</span>
+                    </div>
+                        <div class="col-sm-30">
+                            <span style="color: #1e7e34;"
+                                  th:text="${userProfile.followersCount}"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-30">
+                            <span>Tweet Count: </span>
+                        </div>
+                        <div class="col-sm-30">
+                            <span style="color: #1e7e34;;"
+                                  th:text="${userProfile.statusesCount}"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-30">
+                            <span>Tweet Per Day:</span>
+                        </div>
+                        <div class="col-sm-30">
+                            <span style="color: #1e7e34;"
+                                  th:text="${analysisResult.trollness.dailyTweetRatio}"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-30">
+                            <span>Verified Account:</span>
+                        </div>
+                        <div class="col-sm-30">
+                            <span style="color: #1e7e34;"
+                                  th:text="${userProfile.verified}"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-30">
+                        <span>User Language:</span>
+                    </div>
+                        <div class="col-sm-30">
+                            <span style="color: #1e7e34;"
+                                  th:text="${userProfile.language}"></span>
+                        </div>
+                    </div>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <table class="table" width="70%">
+        <div class="row main-score">
             <div class="col-sm-3">
                 <span>Botness Score:</span>
             </div>
-            <div class="col-sm-9">
-                 <div class="progress" style="margin-top: 5px">
-                    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+            <div class="col-sm-6">
+                 <div class="progress" style="margin-top: 25px">
+                    <div class="progress-bar bg-success  progress-bar-danger progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                         th:style="'width:'+ ${analysisResult.botness.scores.get('english')*100} +'%; height: 20px'">
+                         th:style="'width:'+ ${analysisResult.botness.scores.get('english')*100} +'%; height: 30px'">
                         <span th:text="${analysisResult.botness.scores.get('english')}"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 main-score-explanation">
+                <span>some text here</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Content Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.botness.categories.get('content')*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.botness.categories.get('content')}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Friend Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.botness.categories.get('network')*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.botness.categories.get('network')}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Network Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.botness.categories.get('friend')*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.botness.categories.get('friend')}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Sentiment Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.botness.categories.get('sentiment')*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.botness.categories.get('sentiment')}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Profile Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.botness.categories.get('user')*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.botness.categories.get('user')}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row main-score">
+            <div class="col-sm-3">
+                <span>Trollness Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress progress-" style="margin-top: 25px">
+                    <div class="progress-bar bg-success  progress-bar-danger progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.totalScore*100} +'%; height: 30px'">
+                        <span th:text="${analysisResult.trollness.totalScore}"></span>
                     </div>
                 </div>
             </div>
@@ -88,14 +246,102 @@
 
         <div class="row">
             <div class="col-sm-3">
-                <span>Trolness Score:</span>
+                <span style="margin-left: 40px;">Retweets / Own Content:</span>
             </div>
-            <div class="col-sm-9">
+            <div class="col-sm-6">
                 <div class="progress" style="margin-top: 5px">
-                    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                         th:style="'width:'+ ${analysisResult.trollness.totalScore*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.trollness.totalScore}"></span>
+                         th:style="'width:'+ ${analysisResult.trollness.retweetRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.retweetRatio}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Tweets With Links:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.linkRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.linkRatio}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Tweets with mentions:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.mentionRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.mentionRatio}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Followers with accounts <30 days:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.newFollowerRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.newFollowerRatio}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Followers with <10 tweets:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.inactiveFollowerRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.inactiveFollowerRatio}"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 detail-score-explanation">
+                <span>disabled due to rate limit</span>
+            </div>
+        </div>
+        <!--<div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Followers with same language:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.trollness.followersWithDifferentLanguageRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.trollness.followersWithDifferentLanguageRatio}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>-->
+
+        <div class="row main-score">
+            <div class="col-sm-3">
+                <span>Deadness Score:</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 25px">
+                    <div class="progress-bar bg-success  progress-bar-danger progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.deadness.totalScore*100} +'%; height: 30px'">
+                        <span th:text="${analysisResult.deadness.totalScore}"></span>
                     </div>
                 </div>
             </div>
