--- a/src/main/resources/templates/friendDetails.html
+++ b/src/main/resources/templates/friendDetails.html
@@ -346,6 +346,43 @@
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Mentions with significant keywords:</span>
+            </div>
+            <div class="col-sm-6">
+                <div style="margin-top: 5px">
+                    <span th:text="${analysisResult.deadness.significantMentionsCount}"></span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Tweets in last 30 days (count):</span>
+            </div>
+            <div class="col-sm-6">
+                <div style="margin-top: 5px">
+                    <span th:text="${analysisResult.deadness.recentTweetCount}"></span>
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Tweets in last 30 days (ratio):</span>
+            </div>
+            <div class="col-sm-6">
+                <div class="progress" style="margin-top: 5px">
+                    <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
+                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                         th:style="'width:'+ ${analysisResult.deadness.recentTweetRatio*100} +'%; height: 20px'">
+                        <span th:text="${analysisResult.deadness.recentTweetRatio}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </table>
 </main>
 
