--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,7 +52,7 @@
                     <div class="col-xl-4 col-lg-14 mx-auto">
                         <form action="/connect/twitter" method="post" class="probootstrap-form mb-5">
 
-                            <div class="form-group" style="margin-left: -55%; margin-right: 30%;">
+                            <div class="form-group" style="margin-top: 30%; margin-left: -55%; margin-right: 30%;">
                                 <button class="btn btn-block btn-social btn-twitter">
                                     <i class="fa fa-twitter fa-5x" style="margin-top: 3%; margin-left: 5%"></i>
                                     <span style="font-size: medium; margin-left: 10%">Connect with Twitter</span>
