--- a/src/main/resources/templates/friendDetails.html
+++ b/src/main/resources/templates/friendDetails.html
@@ -150,12 +150,12 @@
                     <div class="progress-bar bg-success  progress-bar-danger progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.botness.scores.get('english')*100} +'%; height: 30px'">
-                        <span th:text="${analysisResult.botness.scores.get('english')}"></span>
+                        <span th:text="${analysisResult.botness.scores.get('english')*100} + '%'"></span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 main-score-explanation">
-                <span>some text here</span>
+                <span>Powered by Botometer</span>
             </div>
         </div>
         <div class="row">
@@ -167,7 +167,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.botness.categories.get('content')*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.botness.categories.get('content')}"></span>
+                        <span th:text="${analysisResult.botness.categories.get('content')*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.botness.categories.get('network')*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.botness.categories.get('network')}"></span>
+                        <span th:text="${analysisResult.botness.categories.get('network')*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.botness.categories.get('friend')*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.botness.categories.get('friend')}"></span>
+                        <span th:text="${analysisResult.botness.categories.get('friend')*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.botness.categories.get('sentiment')*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.botness.categories.get('sentiment')}"></span>
+                        <span th:text="${analysisResult.botness.categories.get('sentiment')*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.botness.categories.get('user')*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.botness.categories.get('user')}"></span>
+                        <span th:text="${analysisResult.botness.categories.get('user')*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                     <div class="progress-bar bg-success  progress-bar-danger progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.trollness.totalScore*100} +'%; height: 30px'">
-                        <span th:text="${analysisResult.trollness.totalScore}"></span>
+                        <span th:text="${analysisResult.trollness.totalScore*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.trollness.retweetRatio*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.trollness.retweetRatio}"></span>
+                        <span th:text="${analysisResult.trollness.retweetRatio*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.trollness.linkRatio*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.trollness.linkRatio}"></span>
+                        <span th:text="${analysisResult.trollness.linkRatio*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.trollness.mentionRatio*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.trollness.mentionRatio}"></span>
+                        <span th:text="${analysisResult.trollness.mentionRatio*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -295,7 +295,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.trollness.newFollowerRatio*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.trollness.newFollowerRatio}"></span>
+                        <span th:text="${analysisResult.trollness.newFollowerRatio*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -309,12 +309,22 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.trollness.inactiveFollowerRatio*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.trollness.inactiveFollowerRatio}"></span>
+                        <span th:text="${analysisResult.trollness.inactiveFollowerRatio*100} + '%'"></span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 detail-score-explanation">
-                <span>disabled due to rate limit</span>
+                <span>Disabled due to rate limit</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <span style="margin-left: 40px;">Tweets with significant keywords:</span>
+            </div>
+            <div class="col-sm-6">
+                <div style="margin-top: 5px">
+                    <span th:text="${analysisResult.Trollness.significantTweetsCount}"></span>
+                </div>
             </div>
         </div>
         <!--<div class="row">
@@ -341,7 +351,7 @@
                     <div class="progress-bar bg-success  progress-bar-danger progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.deadness.totalScore*100} +'%; height: 30px'">
-                        <span th:text="${analysisResult.deadness.totalScore}"></span>
+                        <span th:text="${analysisResult.deadness.totalScore*100} + '%'"></span>
                     </div>
                 </div>
             </div>
@@ -377,7 +387,7 @@
                     <div class="progress-bar bg-warning   progress-bar-striped" role="progressbar"
                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
                          th:style="'width:'+ ${analysisResult.deadness.recentTweetRatio*100} +'%; height: 20px'">
-                        <span th:text="${analysisResult.deadness.recentTweetRatio}"></span>
+                        <span th:text="${analysisResult.deadness.recentTweetRatio*100} + '%'"></span>
                     </div>
                 </div>
             </div>
